build: create new dir config

--- a/scss/header/_header.scss
+++ b/scss/header/_header.scss
@@ -1,69 +1,21 @@
+@use "../variables" as variables;
+
 * {
     box-sizing: border-box;
     margin: 0;
 }
 
 body {
-    background-color: #F2F2F2;
+    background-color: variables.$background-color;
 }
 
-// VAR: fonts
-$font-h2-size: 24px;
-$font-p-size: 14px;
-$font-p-thin-size: 36px;
-$font-icon-size: 20px;
-$font-orange: #EF7F04;
-
-// extands
-%font-h2 {
-    font: {
-        size: $font-h2-size;
-        family: 'Roboto';
-        weight: bold;
-        color: white;
-    }
-}
-
-%font-h2-orange {
-    font: {
-        size: $font-h2-size;
-        family: 'Roboto';
-        weight: bold;
-    }
-    color: $font-orange;
-}
-
-%font-p {
-    font: {
-        size: $font-p-size;
-        family: 'Roboto';
-    }
-    color: white;
-}
-
-%font-p-thin {
-    font: {
-        size: $font-p-thin-size;
-        family: 'Roboto';
-        weight: 100;
-    }
-    color: white;
-}
-
-%font-icon {
-    font: {
-        size: $font-icon-size;
-        family: 'Oswald', serif;
-        weight: bold;
-        color: white;
-    }
-    text-transform: uppercase;
+.header {
+    max-width: 2000px;
 }
 
 .header__wrapper {
-    background-image:
-    url('scss/assets/header/bgready.jpg');
-    background-size: contain;
+    background-image: url('scss/assets/header/bgready.jpg');
+    background-size: cover;
     background-repeat: no-repeat;
     height: 562px;
     display: flex;
@@ -77,10 +29,6 @@ $font-orange: #EF7F04;
     flex-direction: row;
     gap: 30px;
     margin-top: 30px;
-}
-
-.header__p-slogan {
-    
 }
 
 .header__span-name {
@@ -99,7 +47,7 @@ $font-orange: #EF7F04;
 .header__nav {
     display: flex;
     width: 1274px;
-    height: 50px;
+    height: 72px;
     margin-inline: auto;
 }
 
@@ -124,10 +72,34 @@ $font-orange: #EF7F04;
 }
 
 .header__div-buttons {
-    align-items: center;
     a {
         text-decoration: none;
         color: #000;
+    }
+    button {
+        border: none;
+        outline: none;
+        position: relative; /* Для создания псевдоэлемента */
+        padding-top: 4px; /* Чтобы изначально учесть высоту border */
+    }
+    button:hover {
+        color: #000; /* Сохраняем текстовый цвет, если он изменяется */
+    }
+    button::before {
+        content: ''; /* Создаем псевдоэлемент */
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        height: 4px; /* Толщина линии */
+        background-color: transparent; /* Изначально линия прозрачна */
+        transition: background-color 0.3s linear; /* Добавляем плавный эффект */
+    }
+    button:hover::before {
+        background-color: variables.$font-orange; /* При наведении меняем цвет */
+    }
+    button[placeholder]:holder {
+        padding-top: 2px;
     }
 }
 
