--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,6 +2,9 @@
 $font-h2-size: 24px;
 $font-p-size: 14px;
 $font-p-thin-size: 36px;
+$font-p-thin-size-media-large: 28px;
+$font-p-thin-size-media-meduim: 24px;
+$font-p-thin-size-media-small: 20px;
 $font-icon-size: 20px;
 $font-orange: #EF7F04;
 $background-color: #F2F2F2;
