--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -8,6 +8,7 @@ $font-p-thin-size-media-small: 20px;
 $font-icon-size: 20px;
 $font-orange: #EF7F04;
 $background-color: #F2F2F2;
+$background-button: #3B3A63;
 
 // extands
 %font-h2 {
