feat: start to create new page

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,4 +1,6 @@
-// VAR: fonts
+@use "mixins" as mixins;
+
+// VAR: font-sizes
 $font-h2-size: 24px;
 $font-p-size: 14px;
 $font-p-thin-size: 36px;
@@ -6,6 +8,8 @@ $font-p-thin-size-media-large: 28px;
 $font-p-thin-size-media-meduim: 24px;
 $font-p-thin-size-media-small: 20px;
 $font-icon-size: 20px;
+
+// VAR: colors
 $font-orange: #EF7F04;
 $background-color: #F2F2F2;
 $background-button: #3B3A63;
@@ -39,7 +43,7 @@ $background-button: #3B3A63;
 
 %font-p-thin {
     font: {
-        size: $font-p-thin-size;
+        
         family: 'Roboto';
         weight: 100;
     }
@@ -51,7 +55,21 @@ $background-button: #3B3A63;
         size: $font-icon-size;
         family: 'Oswald', serif;
         weight: bold;
-        color: white;
     }
+    //color: white;
     text-transform: uppercase;
+}
+
+%font-button {
+    @extend %font-p;
+    font: {
+        size: 16px;
+    }
+    color: black;
+    @include mixins.screen-respond(large-medium-screens) {
+        font-size: 14px;
+    }
+    @include mixins.screen-respond(medium-screens) {
+        font-size: 14px;
+    }
 }
