--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,9 @@
 @use "mixins" as mixins;
 
+// VAR: sizes
+$global-width: 1247px;
+$global-margin: 122px;
+
 // VAR: font-sizes
 $font-h2-size: 24px;
 $font-p-size: 14px;
@@ -13,6 +17,7 @@ $font-icon-size: 20px;
 $font-orange: #EF7F04;
 $background-color: #F2F2F2;
 $background-button: #3B3A63;
+$background-color-footer: #2F2F51;
 
 // extands
 %font-h2 {
@@ -20,7 +25,6 @@ $background-button: #3B3A63;
         size: $font-h2-size;
         family: 'Roboto';
         weight: bold;
-        color: white;
     }
 }
 
