--- a/scss/main/_main.scss
+++ b/scss/main/_main.scss
@@ -34,12 +34,18 @@
 
         }
     }
+    
     &__p {
         display: list-item;
         &::marker {
             color: #2e9aff;
         }
         @extend %font-p;
+        color: black !important;
+    }
+
+    &__p &__p-block {
+        color: black;
     }
 }
 
@@ -76,9 +82,5 @@
     }
 }
 
-.footer {
-    width: 100%;
-    height: 548px;
-    background-color: variables.$background-color-footer;
-}
+
 
